[package]
name = "kroeg-tap-activitypub"
version = "0.1.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
jsonld = { git = "https://github.com/DrewMcArthur/kroeg-jsonld-rs", branch = "main" }
kroeg-tap = { path = "../tap" }
async-trait = "0.1.13"
openssl = "0.10"
url = "1.7"

[dev-dependencies]
async-std = "0.99"
