[package]
name = "kroeg-tap"
version = "0.2.0"
authors = ["Puck Meerburg <puck@puckipedia.com>"]
edition = "2018"
publish = false

[dependencies]
serde_json = "1.0"
jsonld = { git = "https://github.com/DrewMcArthur/kroeg-jsonld-rs", branch = "main" }
chrono = "0.4"
rand = "0.5"
async-trait = "0.1.13"
